cicd/tekton/smoke/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: smoke-pipeline-trigger
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/smoke)$ $1/ redirect;
spec:
  rules:
  - host: tekton-pipelines.iam.forgeops.com
    http:
      paths:
      - backend:
          serviceName: el-smoke-listener
          servicePort: 8080
        path: /smoke/?(.*)
  tls:
  - hosts:
    - tekton-pipelines.iam.forgeops.com
    secretName: sslcert
